# exceltable

./: .flake8  .gitignore  CHANGES  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: publish-package.yml  test-package.yml
doc/: conf.py  devel.rst  index.rst  pandas_test.py
doc/example/: cartoons.odf  cartoons.ods  cartoons.odt  cartoons.xls  cartoons.xlsb  cartoons.xlsm  cartoons.xlsx  cartoons.xltm  cartoons.xltx  mult_tables.xlsx
sphinxcontrib/: exceltable.py
sphinxcontrib/exceltable/: __init__.py
src/sphinxcontrib/exceltable/: __init__.py
test/: test_exceltable.py
