[metadata]
name = sphinxcontrib-exceltable
description = Sphinx exceltable obfuscation extension
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/sphinx-contrib/exceltable
author = Juha Mustonen
author_email = juha.p.mustonen@gmail.com
license = BSD-3-Clause
license_file = LICENSE
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: Web Environment
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Documentation :: Sphinx
    Topic :: Utilities
download_url = http://pypi.python.org/pypi/sphinxcontrib-exceltable
project_urls =
    GitHub: repo = https://github.com/sphinx-contrib/exceltable
    GitHub: issues = https://github.com/sphinx-contrib/exceltable/issues

[options]
packages = find_namespace:
install_requires =
    Sphinx>=1.8
    Sphinx>=0.6
    xlrd>=2.0
    docutils>=0.19
python_requires = >=3.7
include_package_data = True
platforms = any
zip_safe = False

[aliases]
release = check -rs sdist bdist_wheel

[nosetests]
verbosity=1
detailed-errors=1
with-coverage=1
cover-package=nose
debug=nose.loader
pdb=1
pdb-failures=1

[build_sphinx]
source-dir = doc/
build-dir  = build/doc
all_files  = 1

[upload_docs]
upload_dir = build/doc/html
