[metadata]
name = sphinxcontrib-exceltable
version = 0.3.0-dev1
author = Juha Mustonen
author_email = juha.p.mustonen@gmail.com
description = Support for including Excel spreadsheets into Sphinx documents
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://packages.python.org/sphinxcontrib-exceltable
download_url = http://pypi.python.org/pypi/sphinxcontrib-exceltable
project_urls =
    GitHub: repo = https://github.com/sphinx-contrib/exceltable
    GitHub: issues = https://github.com/sphinx-contrib/exceltable/issues
classifiers =
      Development Status :: 4 - Beta
      Environment :: Console
      Environment :: Web Environment
      Intended Audience :: Developers
      License :: OSI Approved :: MIT License
      Operating System :: OS Independent
      Programming Language :: Python
      Programming Language :: Python :: 2
      Programming Language :: Python :: 3
      Topic :: Documentation
      Topic :: Utilities

[options]
packages = find_namespace:
python_requires = >=3.8, <4
install_requires =
    Sphinx>=5
    xlrd
    docutils
include_package_data = False
package_dir =
    = src
platforms = any
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
test = pytest